Require 1.6 for source build